Fix padding; fix related topics; stretch link

--- a/website/assets/styles/pages/documentation.less
+++ b/website/assets/styles/pages/documentation.less
@@ -37,6 +37,7 @@
   }
 
   .cta-card {
+    cursor: pointer;
     border: 1px solid @ui-gray;
     border-radius: 8px;
     box-shadow: 1px 2px 2px rgba(197, 199, 209, 0.2);
